internal/syntax/resolver/testdata/invalid/undeclared-var-in-interp.txtar
-- src.http --
### Get a Thing
# @prompt id The ID of a thing to get
GET https://api.something.com/{{ missing }}/thing/{{ id }}
-- diagnostics.json --
[
  {
    "msg": "could not resolve interp of interpolated expression: use of undeclared variable missing",
    "position": {
      "name": "undeclared-var-in-interp.txtar",
      "offset": 58,
      "line": 3,
      "startCol": 5,
      "endCol": 59
    }
  },
  {
    "msg": "failed to resolve URL expression: resolve error: undeclared-var-in-interp.txtar:3:5-59: could not resolve interp of interpolated expression: use of undeclared variable missing",
    "position": {
      "name": "undeclared-var-in-interp.txtar",
      "offset": 58,
      "line": 3,
      "startCol": 5,
      "endCol": 59
    }
  }
]
